# core-identity

./: .gitignore  LICENSE  README.md  project.toml  pyproject.toml
.github/workflows/: tests.yml
UUID/: __init__.py  identifier.py
UUID/Core/: identifier.py
tests/: test_identifiers.py
